<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.ui.AboutFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbAbout"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Material.Toolbar.Title.Bold"
        app:titleCentered="true"
        app:title="@string/txt_about"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdAboutIgnore"
        app:layout_constraintTop_toBottomOf="@id/mtbAbout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/divider"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAboutInfo"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:lineHeight="24dp"
        android:textAlignment="center"
        android:padding="24dp"
        android:text="@string/txt_about_info"
        app:layout_constraintBottom_toTopOf="@id/txtAboutVersion"
        app:layout_constraintTop_toBottomOf="@id/mdAboutIgnore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAboutVersion"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/text_secondary"
        android:text="@string/txt_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>