<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Summary Details"
        app:titleCentered="true"
        android:id="@+id/mtbSummaryDetailsMain"
        app:titleTextAppearance="@style/Material.Toolbar.Title.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/divider"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSummaryDetailsIgnore"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbSummaryDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/svSummaryDetails"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/elevation_card"
                app:cardCornerRadius="@dimen/radius_card"
                app:strokeWidth="0dp"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtSummaryDetailsTitle"
                        android:textSize="20sp"
                        android:text="@string/txt_summary_dummy_title"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtSummaryDetailsDate"
                        android:layout_marginTop="12dp"
                        android:textSize="16sp"
                        android:text="@string/txt_summary_dummy_date"
                        android:textColor="@color/text_muted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtSummaryDetailsSource"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:text="@string/txt_summary_dummy_source"
                        android:textColor="@color/text_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/divider"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtSummaryDetailsSummary"
                        android:layout_marginTop="16dp"
                        android:textSize="18sp"
                        android:text="@string/long_string"
                        android:textColor="@color/text_primary"
                        android:lineHeight="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>